--- a/index.html
+++ b/index.html
@@ -17,18 +17,8 @@ h1{font-size:22px;margin:0 0 12px}
 .btn.secondary{background:#e5edff;color:#1e40af}
 .btn.mic{background:#fee2e2;color:#b91c1c}
 .tiny{font-size:12px;color:#6b7280;margin-top:4px}
-.card{display:flex;align-items:center;gap:12px;border:1px solid #e2e8f0;border-radius:10px;padding:10px;margin-bottom:8px;background:#fff}
-.card img{
-  width:100px;
-  height:100px;
-  object-fit:cover;
-  border-radius:8px;
-  flex-shrink:0;
-  background:#f0f0f0;
-  min-width:100px;
-  min-height:100px;
-  display:block;
-}
+.card{border:1px solid #e2e8f0;border-radius:10px;padding:10px;margin-bottom:8px;background:#fff;display:flex;align-items:center;gap:10px}
+.card img{width:80px;height:80px;object-fit:cover;border-radius:10px;border:1px solid #ddd;background:#fafafa}
 .title{font-weight:700;margin-bottom:4px}
 .title span{font-weight:600;color:#555}
 .meta{font-size:12px;color:#566;margin-top:4px}
@@ -36,12 +26,7 @@ h1{font-size:22px;margin:0 0 12px}
 .err{padding:8px 10px;background:#fff3f3;border:1px solid #ffd2d2;border-radius:10px;margin-bottom:12px;color:#7a1a1a;display:none}
 .switch{display:inline-flex;align-items:center;gap:6px;font-size:12px;color:#445}
 .switch input{transform:scale(1.2)}
-@media(max-width:600px){
-  .row{flex-direction:column;align-items:stretch}
-  .input{width:100%}
-  .card{flex-direction:column;align-items:flex-start}
-  .card img{width:100%;height:auto}
-}
+@media(max-width:600px){.row{flex-direction:column;align-items:stretch}.input{width:100%}.card{flex-direction:column;align-items:flex-start}}
 </style>
 </head>
 <body>
@@ -79,7 +64,6 @@ const SRC=document.getElementById("srcHint");
 const TSH=document.getElementById("tsHint");
 const GPS_HINT=document.getElementById("gpsHint");
 const INTENT_HINT=document.getElementById("intentHint");
-
 SRC.textContent="Fuente CSV: "+CSV_URL;
 
 let DATA=[],USER_POS=null,LOADED=false,refreshTimer=null;
@@ -87,30 +71,16 @@ let DATA=[],USER_POS=null,LOADED=false,refreshTimer=null;
 function showStatus(m){STATUS.style.display=m?"block":"none";STATUS.textContent=m||"";}
 function showError(m){ERR.style.display=m?"block":"none";ERR.textContent=m||"";}
 function hideIntent(){INTENT_HINT.style.display="none";INTENT_HINT.textContent="";}
-
 function removeDiacritics(s){return String(s||"").normalize("NFD").replace(/[\u0300-\u036f]/g,"");}
 function norm(s){return removeDiacritics(String(s||"").toLowerCase()).replace(/[^a-z0-9\s]/g," ").replace(/\s+/g," ").trim();}
-function parseCSV(t){
-  const r=t.trim().split(/\r?\n/).map(l=>l.split(/,(?=(?:[^"]*"[^"]*")*[^"]*$)/).map(c=>c.replace(/^"|"$/g,"")));
-  const h=r.shift().map(x=>x.trim().toLowerCase().replace(/\s+/g,"_"));
-  return r.map(l=>Object.fromEntries(h.map((x,i)=>[x,l[i]||""])));
-}
-function parseCoord(v){
-  if(!v)return NaN;
-  let s=String(v).replace(",","."),n=parseFloat(s);
-  if(!isFinite(n)){const d=s.replace(/[^0-9]/g,"");if(d.length>=7)n=parseInt(d,10)/1e6;}
-  if(Math.abs(n)>180)n/=1e6;
-  return n;
-}
-function hav(a,b){const R=6371,toRad=x=>x*Math.PI/180;const dLat=toRad(b.lat-a.lat),dLng=toRad(b.lng-a.lng);
-const s1=Math.sin(dLat/2),s2=Math.sin(dLng/2);
-const A=s1*s1+Math.cos(toRad(a.lat))*Math.cos(toRad(b.lat))*s2*s2;
-return 2*R*Math.asin(Math.min(1,Math.sqrt(A)));}
+function parseCSV(t){const r=t.trim().split(/\r?\n/).map(l=>l.split(/,(?=(?:[^"]*"[^"]*")*[^"]*$)/).map(c=>c.replace(/^"|"$/g,"")));const h=r.shift().map(x=>x.trim().toLowerCase().replace(/\s+/g,"_"));return r.map(l=>Object.fromEntries(h.map((x,i)=>[x,l[i]||""])));}
+function parseCoord(v){if(!v)return NaN;let s=String(v).replace(",","."),n=parseFloat(s);if(!isFinite(n)){const d=s.replace(/[^0-9]/g,"");if(d.length>=7)n=parseInt(d,10)/1e6;}if(Math.abs(n)>180)n/=1e6;return n;}
+function hav(a,b){const R=6371,toRad=x=>x*Math.PI/180;const dLat=toRad(b.lat-a.lat),dLng=toRad(b.lng-a.lng);const s1=Math.sin(dLat/2),s2=Math.sin(dLng/2);const A=s1*s1+Math.cos(toRad(a.lat))*Math.cos(toRad(b.lat))*s2*s2;return 2*R*Math.asin(Math.min(1,Math.sqrt(A)));}
 
 async function loadCSV(){
   try{
     showError("");showStatus("Cargando CSV…");
-    const r=await fetch(CSV_URL+"&nocache="+Date.now(),{cache:"no-store",headers:{'Accept':'text/csv'}});
+    const r=await fetch(CSV_URL+"&nocache="+Date.now(),{cache:"no-store"});
     const txt=await r.text();
     if(/^\s*<!doctype/i.test(txt))throw new Error("HTML en vez de CSV");
     const raw=parseCSV(txt);
@@ -122,49 +92,30 @@ async function loadCSV(){
       const dir=row.direccion||"";
       const kw=row.keywords||"";
       const lat=parseCoord(row.lat),lng=parseCoord(row.lng);
-      const nombreNorm=norm(nombre),rubroNorm=norm(rubro),barrioNorm=norm(barrio),kwNorm=norm(kw);
-      const textNorm=norm([nombre,rubro,barrio,dir,kw].join(" "));
+      const nombreNorm=norm(nombre),rubroNorm=norm(rubro),barrioNorm=norm(barrio),kwNorm=norm(kw),textNorm=norm([nombre,rubro,barrio,dir,kw].join(" "));
       if(barrioNorm)barrios.add(barrioNorm);
-      return {row,nombre,rubro,barrio,dir,kw,lat,lng,nombreNorm,rubroNorm,barrioNorm,kwNorm,textNorm};
+      return{row,nombre,rubro,barrio,dir,kw,lat,lng,nombreNorm,rubroNorm,barrioNorm,kwNorm,textNorm};
     });
     window._BARRIOS=Array.from(barrios);
-    LOADED=true;showStatus("CSV cargado OK · "+DATA.length+" filas.");
+    LOADED=true;
+    showStatus("CSV cargado OK · "+DATA.length+" filas.");
     TSH.textContent="Actualizado: "+new Date().toLocaleTimeString();
   }catch(e){LOADED=false;showStatus("");showError("Error CSV: "+(e.message||e));}
 }
 
 const VERBOS=["comer","almorzar","comprar","buscar","necesito","arreglar","quiero","tomar"];
-function detectBarrio(q){
-  if(!window._BARRIOS)return"";
-  if(q.includes("centro")&&!q.includes("microcentro")&&window._BARRIOS.includes("microcentro"))return"microcentro";
-  if(q.includes("almorzar en el centro")&&window._BARRIOS.includes("microcentro"))return"microcentro";
-  for(const b of window._BARRIOS){if(q.includes(b))return b;}
-  return"";
-}
-
-function detectLocal(q){let match=null;
-  for(const d of DATA){if(!d.nombreNorm)continue;
-    if(q.includes(d.nombreNorm)){if(match&&match!==d)return null;match=d;}
-  }return match;}
-function tokenVariants(t){const v=new Set([t]);if(t.endsWith("s")&&t.length>3)v.add(t.slice(0,-1));
-  if(t.endsWith("es")&&t.length>4)v.add(t.slice(0,-2));return Array.from(v);}
+function detectBarrio(q){if(!window._BARRIOS)return"";if(q.includes("centro")&&!q.includes("microcentro")&&window._BARRIOS.includes("microcentro"))return"microcentro";for(const b of window._BARRIOS){if(q.includes(b))return b;}return"";}
+function detectLocal(q){let match=null;for(const d of DATA){if(!d.nombreNorm)continue;if(q.includes(d.nombreNorm)){if(match&&match!==d)return null;match=d;}}return match;}
+function tokenVariants(t){const v=new Set([t]);if(t.endsWith("s")&&t.length>3)v.add(t.slice(0,-1));if(t.endsWith("es")&&t.length>4)v.add(t.slice(0,-2));return Array.from(v);}
 function isBarrioToken(t){if(!window._BARRIOS)return false;return window._BARRIOS.includes(t);}
-function scoreRow(d,toks,hasVerb){
-  let s=0;for(const t of toks){const vars=tokenVariants(t);
-    for(const v of vars){
-      if(d.nombreNorm.includes(v))s+=4;
-      if(d.rubroNorm.includes(v))s+=hasVerb?7:3;
-      if(d.kwNorm.includes(v))s+=hasVerb?6:2;
-      if(d.textNorm.includes(v))s+=1;
-    }}return s;}
+function scoreRow(d,toks,hasVerb){let s=0;for(const t of toks){const vars=tokenVariants(t);for(const v of vars){if(d.nombreNorm.includes(v))s+=4;if(d.rubroNorm.includes(v))s+=hasVerb?7:3;if(d.kwNorm.includes(v))s+=hasVerb?6:2;if(d.textNorm.includes(v))s+=1;}}return s;}
 
 function buscar(fromText){
   hideIntent();
   if(!LOADED){showStatus("Esperá que cargue el CSV…");return;}
   const raw=(typeof fromText==="string"?fromText:document.getElementById('qall').value).trim();
   if(!raw){render([],"Escribí o dictá algo.");return;}
-  const q=norm(raw);
-  const hasVerb=VERBOS.some(v=>q.includes(v));
+  const q=norm(raw),hasVerb=VERBOS.some(v=>q.includes(v));
   const local=detectLocal(q);
   if(local){
     const dist=(USER_POS&&isFinite(local.lat)&&isFinite(local.lng))?hav(USER_POS,{lat:local.lat,lng:local.lng}):null;
@@ -175,7 +126,7 @@ function buscar(fromText){
   const barrioTerm=detectBarrio(q);
   const allTokens=q.split(/\s+/).filter(t=>t.length>2);
   const toksNoVerbos=allTokens.filter(t=>!VERBOS.includes(t));
-  if(!toksNoVerbos.length){render([], "Probá con alguna palabra clave.");return;}
+  if(!toksNoVerbos.length){render([],"Probá con alguna palabra clave, ej: 'helados', 'libros', 'artículos para el hogar'.");return;}
   const scoringTokensRaw=hasVerb?toksNoVerbos.filter(t=>!isBarrioToken(t)):toksNoVerbos.slice();
   const scoringTokens=scoringTokensRaw.length?scoringTokensRaw:toksNoVerbos;
   const out=[];
@@ -185,26 +136,14 @@ function buscar(fromText){
     if(sc<=0)continue;
     if(hasVerb){
       let strong=false;
-      for(const t of scoringTokens){for(const v of tokenVariants(t)){
-        if(d.rubroNorm.includes(v)||d.kwNorm.includes(v)){strong=true;break;}}if(strong)break;}
+      for(const t of scoringTokens){for(const v of tokenVariants(t)){if(d.rubroNorm.includes(v)||d.kwNorm.includes(v)){strong=true;break;}}
+      if(strong)break;}
       if(!strong)continue;
     }
     const dist=(USER_POS&&isFinite(d.lat)&&isFinite(d.lng))?hav(USER_POS,{lat:d.lat,lng:d.lng}):null;
     out.push({row:d.row,dist,score:sc,nombre:d.nombre});
   }
-  out.sort((a,b)=>{
-    if(a.dist!=null&&b.dist!=null&&a.dist!==b.dist)return a.dist-b.dist;
-    if(b.score!==a.score)return b.score-a.score;
-    const na=a.nombre||"",nb=b.nombre||"";return na.localeCompare(nb);
-  });
-  if(out.length){
-    let detalle=[];
-    if(hasVerb)detalle.push("intención detectada");
-    if(barrioTerm)detalle.push("zona: "+barrioTerm);
-    if(scoringTokens.length)detalle.push("claves: "+scoringTokens.join(", "));
-    INTENT_HINT.style.display="block";
-    INTENT_HINT.textContent=`🔎 Intención: "${raw}"${detalle.length?" → "+detalle.join(" · "):""}`;
-  }
+  out.sort((a,b)=>{if(a.dist!=null&&b.dist!=null&&a.dist!==b.dist)return a.dist-b.dist;if(b.score!==a.score)return b.score-a.score;const na=a.nombre||"",nb=b.nombre||"";return na.localeCompare(nb);});
   render(out);
 }
 
@@ -212,34 +151,20 @@ function buscarCerca(){
   hideIntent();
   if(!LOADED){showStatus("Esperá que cargue el CSV…");return;}
   function run(){
-    const list=[];
-    for(const d of DATA){
-      if(!isFinite(d.lat)||!isFinite(d.lng))continue;
-      const dist=hav(USER_POS,{lat:d.lat,lng:d.lng});
-      list.push({row:d.row,dist});
-    }
+    const list=[];for(const d of DATA){if(!isFinite(d.lat)||!isFinite(d.lng))continue;const dist=hav(USER_POS,{lat:d.lat,lng:d.lng});list.push({row:d.row,dist});}
     list.sort((a,b)=>a.dist-b.dist);
-    let radius=1.5;let inside=list.filter(o=>o.dist<=radius);
-    if(inside.length<3){radius=3.0;inside=list.filter(o=>o.dist<=radius);}
-    GPS_HINT.style.display='block';
-    GPS_HINT.textContent=`📍 Mostrando ≤ ${radius.toFixed(1)} km · ${inside.length} resultados`;
+    let radius=1.5;let inside=list.filter(o=>o.dist<=radius);if(inside.length<3){radius=3.0;inside=list.filter(o=>o.dist<=radius);}
+    GPS_HINT.style.display='block';GPS_HINT.textContent=`📍 Mostrando ≤ ${radius.toFixed(1)} km · ${inside.length} resultados`;
     render(inside);
   }
   if(USER_POS){run();return;}
-  if(!navigator.geolocation){
-    USER_POS={lat:-34.6037,lng:-58.3816};
-    GPS_HINT.style.display='block';
-    GPS_HINT.textContent="📍 Sin GPS, usando centro.";run();return;
-  }
+  if(!navigator.geolocation){USER_POS={lat:-34.6037,lng:-58.3816};GPS_HINT.style.display='block';GPS_HINT.textContent="📍 Sin GPS, usando centro.";run();return;}
   showStatus("Buscando tu ubicación…");
   navigator.geolocation.getCurrentPosition(
-    p=>{USER_POS={lat:p.coords.latitude,lng:p.coords.longitude};
-      showStatus("");GPS_HINT.style.display='block';
-      GPS_HINT.textContent="📍 Ubicación detectada.";run();},
-    ()=>{USER_POS={lat:-34.6037,lng:-58.3816};
-      showStatus("");GPS_HINT.style.display='block';
-      GPS_HINT.textContent="📍 Sin permiso, usando centro.";run();},
-    {enableHighAccuracy:true,timeout:7000});
+    p=>{USER_POS={lat:p.coords.latitude,lng:p.coords.longitude};showStatus("");GPS_HINT.style.display='block';GPS_HINT.textContent="📍 Ubicación detectada.";run();},
+    ()=>{USER_POS={lat:-34.6037,lng:-58.3816};showStatus("");GPS_HINT.style.display='block';GPS_HINT.textContent="📍 Sin permiso, usando centro.";run();},
+    {enableHighAccuracy:true,timeout:7000}
+  );
 }
 
 function render(list,msg){
@@ -249,14 +174,16 @@ function render(list,msg){
     const r=o.row;
     const maps=`https://www.google.com/maps/search/?api=1&query=${encodeURIComponent((r.direccion||"")+" "+(r.barrio||""))}`;
     const dist=(typeof o.dist==="number")?`<div class="meta">≈ ${o.dist.toFixed(2)} km</div>`:"";
-    const img=(r.imagen_url)
-      ? `<img src="${r.imagen_url.startsWith('http')?r.imagen_url:'./'+r.imagen_url}" alt="${r.nombre_local||''}" onerror="this.style.display='none'">`
-      : "";
-    return `<div class="card">${img}
-      <div><div class="title">${r.nombre_local||"(sin nombre)"} — <span>${r.rubro||""}</span></div>
-      <div>${r.direccion||""} ${r.barrio?`(${r.barrio})`:""}</div>
-      ${dist}
-      <div class="meta"><a href="${maps}" target="_blank">Cómo llegar</a></div></div>
+    const imgSrc=r.imagen_url?r.imagen_url.trim():"";
+    const safeSrc=imgSrc?imgSrc:`https://via.placeholder.com/120x80?text=Sin+Imagen`;
+    return `<div class="card">
+      <img src="${safeSrc}" onerror="this.src='https://via.placeholder.com/120x80?text=Sin+Imagen'">
+      <div>
+        <div class="title">${r.nombre_local||"(sin nombre)"} — <span>${r.rubro||""}</span></div>
+        <div>${r.direccion||""} ${r.barrio?`(${r.barrio})`:""}</div>
+        ${dist}
+        <div class="meta"><a href="${maps}" target="_blank">Cómo llegar</a></div>
+      </div>
     </div>`;
   }).join("");
 }
@@ -267,17 +194,7 @@ document.getElementById('locBtn').onclick=buscarCerca;
 document.getElementById('refreshBtn').onclick=loadCSV;
 document.getElementById('autoChk').onchange=e=>{if(e.target.checked){loadCSV();refreshTimer=setInterval(loadCSV,15000);}else{clearInterval(refreshTimer);}};
 document.getElementById('qall').addEventListener('keydown',e=>{if(e.key==="Enter"){e.preventDefault();buscar();}});
-
-(function(){
-const b=document.getElementById('micBtn');
-const SR=window.SpeechRecognition||window.webkitSpeechRecognition;
-if(!SR){b.disabled=true;b.innerText='🎤—';return;}
-const rec=new SR();rec.lang='es-AR';rec.continuous=false;rec.interimResults=false;let active=false;
-b.onclick=()=>{if(active)return;try{rec.start();active=true;b.textContent='⏺️';showStatus("Escuchando…");hideIntent();}catch{}};
-rec.onresult=e=>{const t=e.results[0][0].transcript||'';const limpio=t.trim();document.getElementById('qall').value=limpio;showStatus("Voz: "+limpio);buscar(limpio);};
-rec.onerror=()=>{showStatus("Error al escuchar.");};
-rec.onend=()=>{active=false;b.textContent='🎤';};
-})();
+(function(){const b=document.getElementById('micBtn');const SR=window.SpeechRecognition||window.webkitSpeechRecognition;if(!SR){b.disabled=true;b.innerText='🎤—';return;}const rec=new SR();rec.lang='es-AR';rec.continuous=false;rec.interimResults=false;let active=false;b.onclick=()=>{if(active)return;try{rec.start();active=true;b.textContent='⏺️';showStatus("Escuchando…");hideIntent();}catch{}};rec.onresult=e=>{const t=e.results[0][0].transcript||'';const limpio=t.trim();document.getElementById('qall').value=limpio;showStatus("Voz: "+limpio);buscar(limpio);};rec.onerror=()=>{showStatus("Error al escuchar.");};rec.onend=()=>{active=false;b.textContent='🎤';};})();
 loadCSV();
 </script>
 </body>
