--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8"/>
 <meta name="viewport" content="width=device-width,initial-scale=1"/>
-<title>Aquí Nomás — DEMO inteligente</title>
+<title>Aquí Nomás — DEMO inteligente (local images)</title>
 <style>
 :root{--pri:#0b5cff;}
 body{font-family:system-ui,-apple-system,Segoe UI,Roboto,Helvetica,Arial,sans-serif;margin:0;background:#f7f9fb;color:#0b1220}
@@ -18,7 +18,7 @@ h1{font-size:22px;margin:0 0 12px}
 .btn.mic{background:#fee2e2;color:#b91c1c}
 .tiny{font-size:12px;color:#6b7280;margin-top:4px}
 .card{border:1px solid #e2e8f0;border-radius:10px;padding:10px;margin-bottom:8px;background:#fff;display:flex;align-items:center;gap:10px}
-.card img{width:80px;height:80px;object-fit:cover;border-radius:10px;border:1px solid #ddd;background:#fafafa}
+.card img{width:100px;height:100px;object-fit:cover;border-radius:10px;border:1px solid #ddd;background:#fafafa}
 .title{font-weight:700;margin-bottom:4px}
 .title span{font-weight:600;color:#555}
 .meta{font-size:12px;color:#566;margin-top:4px}
@@ -26,7 +26,11 @@ h1{font-size:22px;margin:0 0 12px}
 .err{padding:8px 10px;background:#fff3f3;border:1px solid #ffd2d2;border-radius:10px;margin-bottom:12px;color:#7a1a1a;display:none}
 .switch{display:inline-flex;align-items:center;gap:6px;font-size:12px;color:#445}
 .switch input{transform:scale(1.2)}
-@media(max-width:600px){.row{flex-direction:column;align-items:stretch}.input{width:100%}.card{flex-direction:column;align-items:flex-start}}
+@media(max-width:600px){
+  .row{flex-direction:column;align-items:stretch}
+  .input{width:100%}
+  .card{flex-direction:column;align-items:flex-start}
+}
 </style>
 </head>
 <body>
@@ -37,12 +41,12 @@ h1{font-size:22px;margin:0 0 12px}
 
   <div class="box">
     <div class="row">
-      <input id="qall" class="input" placeholder="Ej: 'quiero almorzar en el centro', 'comprar libros', 'comer helados en microcentro'"/>
-      <button id="micBtn" class="btn mic" title="Dictar por voz">🎤</button>
+      <input id="qall" class="input" placeholder="Ej: 'almorzar en el centro', 'comprar libros', 'comer helados en microcentro'"/>
+      <button id="micBtn" class="btn mic">🎤</button>
       <button id="goBtn" class="btn">Buscar</button>
       <button id="clearBtn" class="btn ghost">Limpiar</button>
-      <button id="locBtn" class="btn secondary" title="Usar mi ubicación">📍 Cerca</button>
-      <button id="refreshBtn" class="btn">Actualizar datos</button>
+      <button id="locBtn" class="btn secondary">📍 Cerca</button>
+      <button id="refreshBtn" class="btn">Actualizar</button>
     </div>
     <div class="row" style="margin-top:10px">
       <label class="switch"><input id="autoChk" type="checkbox"/> Auto (15s)</label>
@@ -110,12 +114,6 @@ function tokenVariants(t){const v=new Set([t]);if(t.endsWith("s")&&t.length>3)v.
 function isBarrioToken(t){if(!window._BARRIOS)return false;return window._BARRIOS.includes(t);}
 function scoreRow(d,toks,hasVerb){let s=0;for(const t of toks){const vars=tokenVariants(t);for(const v of vars){if(d.nombreNorm.includes(v))s+=4;if(d.rubroNorm.includes(v))s+=hasVerb?7:3;if(d.kwNorm.includes(v))s+=hasVerb?6:2;if(d.textNorm.includes(v))s+=1;}}return s;}
 
-function proxify(url){
-  if(!url)return "";
-  if(url.startsWith("https://images.weserv.nl/")) return url;
-  return "https://images.weserv.nl/?url="+encodeURIComponent(url)+"&output=jpg";
-}
-
 function buscar(fromText){
   hideIntent();
   if(!LOADED){showStatus("Esperá que cargue el CSV…");return;}
@@ -181,9 +179,9 @@ function render(list,msg){
     const maps=`https://www.google.com/maps/search/?api=1&query=${encodeURIComponent((r.direccion||"")+" "+(r.barrio||""))}`;
     const dist=(typeof o.dist==="number")?`<div class="meta">≈ ${o.dist.toFixed(2)} km</div>`:"";
     const imgSrc=r.imagen_url?r.imagen_url.trim():"";
-    const proxy=imgSrc?proxify(imgSrc):"https://via.placeholder.com/120x80?text=Sin+Imagen";
+    const finalSrc=imgSrc.startsWith("http")?imgSrc:"./"+imgSrc;
     return `<div class="card">
-      <img src="${proxy}" onerror="this.src='https://via.placeholder.com/120x80?text=Sin+Imagen'">
+      <img src="${finalSrc}" onerror="this.style.display='none'">
       <div>
         <div class="title">${r.nombre_local||"(sin nombre)"} — <span>${r.rubro||""}</span></div>
         <div>${r.direccion||""} ${r.barrio?`(${r.barrio})`:""}</div>
